<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gismap.StevensPointFlowage" >
	
     <item
        android:id="@+id/action_addlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_addlayer"
        android:showAsAction="ifRoom"
        android:title="@string/action_addLayer"/>
     
     <item
         android:id="@+id/action_locate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_locate"
         android:showAsAction="ifRoom"
         android:title="@string/action_locate"/>
     
     <item
         android:id="@+id/action_navigate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_navigate"
         android:showAsAction="ifRoom"
         android:title="@string/action_navigate"/>
     
     <item 
         android:id="@+id/action_information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:icon="@drawable/ic_information"
         android:showAsAction="ifRoom"
         android:title="@string/action_information"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
